# grpc

./: .gitignore  CMakeLists.txt  LT.grpc.pb.cc  LT.grpc.pb.h  LT.pb.cc  LT.pb.h  client.cc  server.cc
cmake/: common.cmake
protos/: LT.proto
